
	mbcico:
		Added support for binkp GZ and BZ2 compression. Can be turned
		off per node. Only effective with originating calls. Incoming
		calls follow the remote.
		Increased binkp timeout from 180 to 300 seconds.

	mbsebbs:
		Added logging of remote host and terminal.
		Added subject line clean in several places.

	mbnewuser:
		Added logging of remote host and terminal.

	mball:
		If a valid WWW logfile is specified in menu 1.13.4 then http
		downloads are counted and the filedatabase is updated before
		the allfiles listings are created. Note that the very first
		time only a mark is placed in ~/var and nothing is done.

	mbfido:
		Fixed commandline parser for mail recipients.
		Added subject line clean in several places.
		When message areas are autocreated, golded.inc and msg.txt are
		recreated for the external editors.
		The web stats can now limit the size of mailhistory.html

	mbmon:
		Made Internet BBS Chat final.

	mbtask:
		Made Internet BBS Chat final.

	mbsetup:
		Added setup switches per node to disable PLZ or GZ and BZ2
		compression protocols with binkp.
		Added setup entry 1.15.8 to set a limit on the size of the
		mailer history html page.
		Made Internet BBS Chat final.
		Added setup items 1.13.4 and 1.13.5. These could point to
		a valid apache logfile in common format and ftp xferlog
		logfile. If defined then downloads via www and or ftp can
		be counted.


v0.71.2		16-Jan-2005 - 13-Jun-2005

	upgrade:
		Start mbsetup, in screen 1.2 item 10, add your real internet
		name or IP there. This MUST be the name that is returned when
		you do a nslookup on your IP address.
		Add the following line to /etc/services:
		fido            60179/udp               # chatserver

	general:
		Upgraded to ftscprod.010

	charset:
		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
		This allows rfc mime headers to show official names.
		Added some basic things to support Chinese.

	libdiesel.a: